src/snapshots/chmi__parse__tests__parse_u32j59x_capabilities.snap
---
source: src/parse.rs
expression: capabilities
---
Capabilities {
    vcp: Some(
        [
            VcpCode {
                code: 2,
                values: [],
            },
            VcpCode {
                code: 4,
                values: [],
            },
            VcpCode {
                code: 5,
                values: [],
            },
            VcpCode {
                code: 8,
                values: [],
            },
            VcpCode {
                code: 16,
                values: [],
            },
            VcpCode {
                code: 18,
                values: [],
            },
            VcpCode {
                code: 20,
                values: [
                    5,
                    8,
                    11,
                    12,
                ],
            },
            VcpCode {
                code: 22,
                values: [],
            },
            VcpCode {
                code: 24,
                values: [],
            },
            VcpCode {
                code: 26,
                values: [],
            },
            VcpCode {
                code: 82,
                values: [],
            },
            VcpCode {
                code: 96,
                values: [
                    17,
                    18,
                    15,
                ],
            },
            VcpCode {
                code: 172,
                values: [],
            },
            VcpCode {
                code: 174,
                values: [],
            },
            VcpCode {
                code: 178,
                values: [],
            },
            VcpCode {
                code: 182,
                values: [],
            },
            VcpCode {
                code: 198,
                values: [],
            },
            VcpCode {
                code: 200,
                values: [],
            },
            VcpCode {
                code: 201,
                values: [],
            },
            VcpCode {
                code: 214,
                values: [
                    1,
                    4,
                    5,
                ],
            },
            VcpCode {
                code: 220,
                values: [
                    0,
                    2,
                    3,
                    5,
                ],
            },
            VcpCode {
                code: 223,
                values: [],
            },
            VcpCode {
                code: 253,
                values: [],
            },
        ],
    ),
}
