src/snapshots/chmi__parse__tests__parse_un880_capabilities.snap
---
source: src/parse.rs
expression: capabilities
---
Capabilities {
    vcp: Some(
        [
            VcpCode {
                code: 2,
                values: [],
            },
            VcpCode {
                code: 4,
                values: [],
            },
            VcpCode {
                code: 5,
                values: [],
            },
            VcpCode {
                code: 8,
                values: [],
            },
            VcpCode {
                code: 16,
                values: [],
            },
            VcpCode {
                code: 18,
                values: [],
            },
            VcpCode {
                code: 20,
                values: [
                    5,
                    8,
                    11,
                ],
            },
            VcpCode {
                code: 22,
                values: [],
            },
            VcpCode {
                code: 24,
                values: [],
            },
            VcpCode {
                code: 26,
                values: [],
            },
            VcpCode {
                code: 82,
                values: [],
            },
            VcpCode {
                code: 96,
                values: [
                    17,
                    18,
                    15,
                    0,
                ],
            },
            VcpCode {
                code: 172,
                values: [],
            },
            VcpCode {
                code: 174,
                values: [],
            },
            VcpCode {
                code: 178,
                values: [],
            },
            VcpCode {
                code: 182,
                values: [],
            },
            VcpCode {
                code: 192,
                values: [],
            },
            VcpCode {
                code: 198,
                values: [],
            },
            VcpCode {
                code: 200,
                values: [],
            },
            VcpCode {
                code: 201,
                values: [],
            },
            VcpCode {
                code: 214,
                values: [
                    1,
                    4,
                ],
            },
            VcpCode {
                code: 223,
                values: [],
            },
            VcpCode {
                code: 98,
                values: [],
            },
            VcpCode {
                code: 141,
                values: [],
            },
            VcpCode {
                code: 244,
                values: [],
            },
            VcpCode {
                code: 245,
                values: [
                    0,
                    1,
                    2,
                ],
            },
            VcpCode {
                code: 246,
                values: [
                    0,
                    1,
                    2,
                ],
            },
            VcpCode {
                code: 77,
                values: [],
            },
            VcpCode {
                code: 78,
                values: [],
            },
            VcpCode {
                code: 79,
                values: [],
            },
            VcpCode {
                code: 21,
                values: [
                    1,
                    6,
                    17,
                    19,
                    20,
                    21,
                    24,
                    25,
                    40,
                    41,
                    72,
                ],
            },
            VcpCode {
                code: 247,
                values: [
                    0,
                    1,
                    2,
                    3,
                ],
            },
            VcpCode {
                code: 248,
                values: [
                    0,
                    1,
                ],
            },
            VcpCode {
                code: 249,
                values: [],
            },
            VcpCode {
                code: 228,
                values: [],
            },
            VcpCode {
                code: 229,
                values: [],
            },
            VcpCode {
                code: 230,
                values: [],
            },
            VcpCode {
                code: 231,
                values: [],
            },
            VcpCode {
                code: 232,
                values: [],
            },
            VcpCode {
                code: 233,
                values: [],
            },
            VcpCode {
                code: 234,
                values: [],
            },
            VcpCode {
                code: 235,
                values: [],
            },
            VcpCode {
                code: 239,
                values: [],
            },
            VcpCode {
                code: 253,
                values: [
                    0,
                    1,
                ],
            },
            VcpCode {
                code: 254,
                values: [
                    0,
                    1,
                    2,
                ],
            },
            VcpCode {
                code: 255,
                values: [],
            },
        ],
    ),
}
